simplify payout method, add println